c/src/test/resources/c/mini_bnc/valid/mult.c
#include "../../../reserved.h"

int main() {
	int a = 1 * 2;
	ASSERT(a == 2);
	return a;
}
